Changed button formatting, attempted to fix colors,  maybe its too late..probably didnt work

--- a/Develop /index.html
+++ b/Develop /index.html
@@ -27,6 +27,7 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <div class="currentDay" id="currentDay">
     </header>
     <div class="container">
       <div class="row">
@@ -37,7 +38,7 @@
           <textarea>Add event Here..</textarea>
         </div>
         <div class="col-3">
-         Button
+            <button id = saveBtn>Save</button>
          </div>
       </div>
       <div class="row">
@@ -48,7 +49,7 @@
           <textarea>Add event Here..</textarea>
         </div>
         <div class="col-3">
-         Button
+            <button id = saveBtn>Save</button>
          </div>
       </div>
       <div class="row">
@@ -59,7 +60,7 @@
           <textarea>Add event Here..</textarea>
         </div>
         <div class="col-3">
-         Button
+            <button id = saveBtn>Save</button>
          </div>
       </div>
       <div class="row">
@@ -70,7 +71,7 @@
           <textarea>Add event Here..</textarea>
         </div>
         <div class="col-3">
-         Button
+            <button id = saveBtn> Save</button>
          </div>
       </div>
       <div class="row">
@@ -81,7 +82,7 @@
           <textarea>Add event Here..</textarea>
         </div>
         <div class="col-3">
-         Button
+            <button id = saveBtn> Save</button>
          </div>
       </div>
       <div class="row">
@@ -92,7 +93,7 @@
           <textarea>Add event Here..</textarea>
         </div>
         <div class="col-3">
-         Button
+           <button id = saveBtn> Save</button>
          </div>
       </div>
       <div class="row">
@@ -103,7 +104,7 @@
           <textarea>Add event Here..</textarea>
         </div>
         <div class="col-3">
-         Button
+            <button id =saveBtn> Save</button>
          </div>
       </div>
       <div class="row">
@@ -114,7 +115,7 @@
           <textarea>Add event Here..</textarea>
         </div>
         <div class="col-3">
-         Button
+            <button id =saveBtn> Save</button>
          </div>
       </div>
       <div class="row">
@@ -125,17 +126,15 @@
           <textarea>Add event Here..</textarea>
         </div>
         <div class="col-3">
-         Button
+            <button id =saveBtn> Save</button>
          </div>
       </div>
       </div>
 
     </div>
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script>
-      
-    </script>
+    <script src="script.js"> </script>
   </body>
 </html>
