adding classes to html hour blocks

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="currentDay" id="currentDay">
     </header>
     <div class="container">
-      <div class="row">
+      <div class="9am" class="row">
         <div class="col-3">
          9AM
         </div>
@@ -41,7 +41,7 @@
             <button id = saveBtn>Save</button>
          </div>
       </div>
-      <div class="row">
+      <div class="10am" class="row">
         <div class="col-3">
          10AM
         </div>
@@ -52,7 +52,7 @@
             <button id = saveBtn>Save</button>
          </div>
       </div>
-      <div class="row">
+      <div class="11am" class="row">
         <div class="col-3">
          11AM
         </div>
@@ -63,7 +63,7 @@
             <button id = saveBtn>Save</button>
          </div>
       </div>
-      <div class="row">
+      <div class="12pm" class="row">
         <div class="col-3">
          12PM
         </div>
@@ -74,7 +74,7 @@
             <button id = saveBtn> Save</button>
          </div>
       </div>
-      <div class="row">
+      <div class="1pm" class="row">
         <div class="col-3">
          1PM
         </div>
@@ -85,7 +85,7 @@
             <button id = saveBtn> Save</button>
          </div>
       </div>
-      <div class="row">
+      <div class="2pm" class="row">
         <div class="col-3">
          2PM
         </div>
@@ -96,7 +96,7 @@
            <button id = saveBtn> Save</button>
          </div>
       </div>
-      <div class="row">
+      <div class="3pm" class="row">
         <div class="col-3">
          3PM
         </div>
@@ -107,7 +107,7 @@
             <button id =saveBtn> Save</button>
          </div>
       </div>
-      <div class="row">
+      <div class="4pm" class="row">
         <div class="col-3">
          4PM
         </div>
@@ -118,7 +118,7 @@
             <button id =saveBtn> Save</button>
          </div>
       </div>
-      <div class="row">
+      <div class="5pm" class="row">
         <div class="col-3">
          5PM
         </div>
