--- a/index.html
+++ b/index.html
@@ -5,19 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"rossorigin="anonymous"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"  />
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -30,108 +20,76 @@
       <div class="currentDay" id="currentDay">
     </header>
     <div class="container">
-      <div class="9am" class="row">
-        <div class="col-3">
+      <div class="9am" class="row time-block">
+        <div class="col-md-1-hour">
          9AM
         </div>
-        <div class="col-6">
-          <textarea>Add event Here..</textarea>
-        </div>
-        <div class="col-3">
-            <button id = saveBtn>Save</button>
-         </div>
+          <textarea class="col-md-10 description" > Add event Here..</textarea>
+            <button class="btn saveBtn col-md-1">Save</button> 
       </div>
-      <div class="10am" class="row">
-        <div class="col-3">
+           <div class="10am" class="row time-block">
+        <div class="col-md-1-hour">
          10AM
         </div>
-        <div class="col-6">
-          <textarea>Add event Here..</textarea>
-        </div>
-        <div class="col-3">
-            <button id = saveBtn>Save</button>
-         </div>
+          <textarea class="col-md-10 description" > Add event Here..</textarea>
+            <button class="btn saveBtn col-md-1">Save</button> 
       </div>
-      <div class="11am" class="row">
-        <div class="col-3">
+      <div class="11am" class="row time-block">
+        <div class="col-md-1-hour">
          11AM
         </div>
-        <div class="col-6">
-          <textarea>Add event Here..</textarea>
-        </div>
-        <div class="col-3">
-            <button id = saveBtn>Save</button>
-         </div>
+          <textarea class="col-md-10 description" > Add event Here..</textarea>
+            <button class="btn saveBtn col-md-1">Save</button> 
       </div>
-      <div class="12pm" class="row">
-        <div class="col-3">
+      <div class="12pm" class="row time-block">
+        <div class="col-md-1-hour">
          12PM
         </div>
-        <div class="col-6">
-          <textarea>Add event Here..</textarea>
-        </div>
-        <div class="col-3">
-            <button id = saveBtn> Save</button>
-         </div>
+          <textarea class="col-md-10 description" > Add event Here..</textarea>
+            <button class="btn saveBtn col-md-1">Save</button> 
       </div>
-      <div class="1pm" class="row">
-        <div class="col-3">
+      <div class="1pm" class="row time-block">
+        <div class="col-md-1-hour">
          1PM
         </div>
-        <div class="col-6">
-          <textarea>Add event Here..</textarea>
-        </div>
-        <div class="col-3">
-            <button id = saveBtn> Save</button>
-         </div>
+          <textarea class="col-md-10 description" > Add event Here..</textarea>
+            <button class="btn saveBtn col-md-1">Save</button> 
       </div>
-      <div class="2pm" class="row">
-        <div class="col-3">
+      <div class="2pm" class="row time-block">
+        <div class="col-md-1-hour">
          2PM
         </div>
-        <div class="col-6">
-          <textarea>Add event Here..</textarea>
-        </div>
-        <div class="col-3">
-           <button id = saveBtn> Save</button>
-         </div>
+          <textarea class="col-md-10 description" > Add event Here..</textarea>
+            <button class="btn saveBtn col-md-1">Save</button> 
       </div>
-      <div class="3pm" class="row">
-        <div class="col-3">
+      <div class="3pm" class="row time-block">
+        <div class="col-md-1-hour">
          3PM
         </div>
-        <div class="col-6">
-          <textarea>Add event Here..</textarea>
-        </div>
-        <div class="col-3">
-            <button id =saveBtn> Save</button>
-         </div>
+          <textarea class="col-md-10 description" > Add event Here..</textarea>
+            <button class="btn saveBtn col-md-1">Save</button> 
       </div>
-      <div class="4pm" class="row">
-        <div class="col-3">
+      <div class="4pm" class="row time-block">
+        <div class="col-md-1-hour">
          4PM
         </div>
-        <div class="col-6">
-          <textarea>Add event Here..</textarea>
-        </div>
-        <div class="col-3">
-            <button id =saveBtn> Save</button>
-         </div>
+          <textarea class="col-md-10 description" > Add event Here..</textarea>
+            <button class="btn saveBtn col-md-1">Save</button> 
       </div>
-      <div class="5pm" class="row">
-        <div class="col-3">
+      <div class="5pm" class="row time-block">
+        <div class="col-md-1-hour">
          5PM
         </div>
-        <div class="col-6">
-          <textarea>Add event Here..</textarea>
-        </div>
-        <div class="col-3">
-            <button id =saveBtn> Save</button>
-         </div>
+          <textarea class="col-md-10 description" > Add event Here..</textarea>
+            <button class="btn saveBtn col-md-1">Save</button> 
       </div>
       </div>
 
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script>
+        moment().format();
+    </script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
