--- a/index.html
+++ b/index.html
@@ -13,86 +13,122 @@
   </head>
 
   <body>
+
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
       <div class="currentDay" id="currentDay">
     </header>
+
+
     <div class="container">
-      <div class="9am" class="row time-block">
-        <div class="col-md-1-hour">
-         9AM
+      <div class="col text-center">
+
+        <div class="row hour" id="8am" data-hour="8">
+        <div class="col-3">
+          <h3>8AM</h3>
         </div>
-          <textarea class="col-md-10 description" > Add event Here..</textarea>
-            <button class="btn saveBtn col-md-1">Save</button> 
-      </div>
-           <div class="10am" class="row time-block">
-        <div class="col-md-1-hour">
-         10AM
+            <textarea class="col-6 textContent"></textarea>
+            <button class="col-3 button"> Save</button>
+     </div>
+    
+      <div class="col text-center">
+
+        <div class="row hour" id="9am" data-hour="8">
+        <div class="col-3">
+          <h3>9AM</h3>
         </div>
-          <textarea class="col-md-10 description" > Add event Here..</textarea>
-            <button class="btn saveBtn col-md-1">Save</button> 
-      </div>
-      <div class="11am" class="row time-block">
-        <div class="col-md-1-hour">
-         11AM
+            <textarea class="col-6 textContent"></textarea>
+            <button class="col-3 button"> Save</button>
+     </div>
+
+      <div class="col text-center">
+
+        <div class="row hour" id="10am" data-hour="8">
+        <div class="col-3">
+          <h3>10AM</h3>
         </div>
-          <textarea class="col-md-10 description" > Add event Here..</textarea>
-            <button class="btn saveBtn col-md-1">Save</button> 
-      </div>
-      <div class="12pm" class="row time-block">
-        <div class="col-md-1-hour">
-         12PM
+            <textarea class="col-6 textContent"></textarea>
+            <button class="col-3 button"> Save</button>
+     </div>
+  
+      <div class="col text-center">
+
+        <div class="row hour" id="11am" data-hour="8">
+        <div class="col-3">
+          <h3>11AM</h3>
         </div>
-          <textarea class="col-md-10 description" > Add event Here..</textarea>
-            <button class="btn saveBtn col-md-1">Save</button> 
-      </div>
-      <div class="1pm" class="row time-block">
-        <div class="col-md-1-hour">
-         1PM
+            <textarea class="col-6 textContent"></textarea>
+            <button class="col-3 button"> Save</button>
+     </div>
+
+      <div class="col text-center">
+
+        <div class="row hour" id="12pm" data-hour="8">
+        <div class="col-3">
+          <h3>12PM</h3>
         </div>
-          <textarea class="col-md-10 description" > Add event Here..</textarea>
-            <button class="btn saveBtn col-md-1">Save</button> 
-      </div>
-      <div class="2pm" class="row time-block">
-        <div class="col-md-1-hour">
-         2PM
+            <textarea class="col-6 textContent"></textarea>
+            <button class="col-3 button"> Save</button>
+   
+      <div class="col text-center">
+
+        <div class="row hour" id="1pm" data-hour="8">
+        <div class="col-3">
+          <h3>1PM</h3>
         </div>
-          <textarea class="col-md-10 description" > Add event Here..</textarea>
-            <button class="btn saveBtn col-md-1">Save</button> 
-      </div>
-      <div class="3pm" class="row time-block">
-        <div class="col-md-1-hour">
-         3PM
+            <textarea class="col-6 textContent"></textarea>
+            <button class="col-3 button"> Save</button>
+     </div>
+     <div class="col text-center">
+
+
+        <div class="row hour" id="2pm" data-hour="8">
+        <div class="col-3">
+          <h3>2PM</h3>
         </div>
-          <textarea class="col-md-10 description" > Add event Here..</textarea>
-            <button class="btn saveBtn col-md-1">Save</button> 
-      </div>
-      <div class="4pm" class="row time-block">
-        <div class="col-md-1-hour">
-         4PM
+            <textarea class="col-6 textContent"></textarea>
+            <button class="col-3 button"> Save</button>
+     </div>
+   
+      <div class="col text-center">
+
+        <div class="row hour" id="3pm" data-hour="8">
+        <div class="col-3">
+          <h3>3PM</h3>
         </div>
-          <textarea class="col-md-10 description" > Add event Here..</textarea>
-            <button class="btn saveBtn col-md-1">Save</button> 
-      </div>
-      <div class="5pm" class="row time-block">
-        <div class="col-md-1-hour">
-         5PM
+            <textarea class="col-6 textContent"></textarea>
+            <button class="col-3 button"> Save</button>
+     </div>
+     <div class="col text-center">
+
+
+        <div class="row hour" id="4pm" data-hour="8">
+        <div class="col-3">
+          <h3>4PM</h3>
         </div>
-          <textarea class="col-md-10 description" > Add event Here..</textarea>
-            <button class="btn saveBtn col-md-1">Save</button> 
-      </div>
-      </div>
+            <textarea class="col-6 textContent"></textarea>
+            <button class="col-3 button"> Save</button>
+     </div>
+     <div class="col text-center">
+  
+
+        <div class="row hour" id="5pm" data-hour="8">
+        <div class="col-3">
+          <h3>5PM</h3>
+        </div>
+            <textarea class="col-6 textContent"></textarea>
+            <button class="col-3 button"> Save</button>
+     </div>
+  
 
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-    <script>
-        moment().format();
-    </script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="script.js"> </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+         <script src="script.js"> </script>
   </body>
 </html>
