updating read me, and adding current date to top of page.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
             <div class="jumbotron">
                 <h1 class="text-center">Work Day Scheduler</h1>
-                <h3 class="text-center currentDate"></h3>
+                <h3 class="text-center currentDay"  id="currentDay"></h3>
             </div>
     
         </div>
